RESOLVED FIXED165486
DumpRenderTree crashed in com.apple.WebCore: WebCore::MockMediaEndpoint::generateDtlsInfo const + 23
https://bugs.webkit.org/show_bug.cgi?id=165486
Summary DumpRenderTree crashed in com.apple.WebCore: WebCore::MockMediaEndpoint::gene...
Sam Weinig
Reported 2016-12-06 13:36:09 PST
MockMediaEndpoint is crashing regularly in MockMediaEndpoint::generateDtlsInfo while running tests.
Attachments
Patch (2.65 KB, patch)
2016-12-06 13:38 PST, Sam Weinig
thorton: review+
Sam Weinig
Comment 1 2016-12-06 13:36:22 PST
Sam Weinig
Comment 2 2016-12-06 13:37:02 PST
Reproducible with: run-webkit-tests -1 --guard-malloc imported/w3c/web-platform-tests/webrtc/rtcpeerconnection --repeat 10 -v --additional-env-var=JSC_slowPathAllocsBetweenGCs=10
Sam Weinig
Comment 3 2016-12-06 13:38:47 PST
Sam Weinig
Comment 4 2016-12-06 13:45:26 PST
Note You need to log in before you can comment on or make changes to this bug.