DumpRenderTree crashed in com.apple.WebCore: WebCore::MockMediaEndpoint::generateDtlsInfo const + 23 https://bugs.webkit.org/show_bug.cgi?id=165486 <rdar://problem/29149588>

Reviewed by Tim Horton.

The MockMediaEndpoint can be destroyed before the task created in MockMediaEndpoint::generateDtlsInfo()
gets a chance to run, so guard it with a weak pointer.

* platform/mock/MockMediaEndpoint.cpp:
(WebCore::MockMediaEndpoint::MockMediaEndpoint):
(WebCore::MockMediaEndpoint::generateDtlsInfo):
* platform/mock/MockMediaEndpoint.h:


Canonical link: https://commits.webkit.org/183083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209416 268f45cc-cd09-0410-ab3c-d52691b4dbfc